Added create/get ticket

--- a/api/pytest.ini
+++ b/api/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+env =
+  DJANGO_SETTINGS_MODULE=api.settings
 addopts = --cov=.
           --cov-report term-missing:skip-covered 
           --cov-report html
